--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <h1>Welcome to Quizzer</h1>
       </nav>
     </header>
+    <button class="Next" onclick="switchPage()"></button>
+    <section id="quizPage">
     <div class="currentScore">Your score: <br/> <span id="displayScore">0</span></div>
     <div class="currentScore" id="high">Your Highscore: <br/> <span id="displayHighScore">0</span></div>
     <div class="Questions-container">
@@ -263,6 +265,9 @@
        <div class="button-container"><button type="submit" id="submitBtn">Submit</button></div> 
       </form>
     </div>
+    </section>
+    <section id="scoresPage">
+    </section>
   </body>
       <script src="index.js"></script>
 </html>
