Bugs and layout fixes

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
         <h1>Welcome to Quizzer</h1>
       </nav>
     </header>
+    <div class="hidebtn">
     <button class="next" onclick="switchPage()"></button>
     <button class="enter-question" onclick="openQuestionsPage()">
       Add new question
-    </button>
+    </button></div>
     <section id="enter-questionPage">
       <form action="">
         <textarea type="text" wrap="soft" id="question-box" placeholder="Enter your question here and select the radio-button corresponding to the correct answer"></textarea>>
